Revision history for DBIx::Class

0.081000 2009-04-19 11:39:35 (UTC)
        - Todo out the register_extra_source test until after shipping

0.08099_08 2009-03-30 00:00:00 (UTC)
        - Fixed taint mode with load_namespaces
        - Putting IC::DateTime locale, timezone or floating_tz_ok attributes into
          extra => {} has been deprecated. The new way is to put these things
          directly into the columns definition
        - Switched MI code to MRO::Compat
        - Document db-side default_value caveats
        - Search_like() now warns to indicate deprecation in 0.09. (robkinyon)
        - TxnScopeGuard left experimental state

0.08099_07 2009-02-27 02:00:00 (UTC)
        - multi-create using find_or_create rather than _related for post-insert
        - fix get_inflated_columns to check has_column_loaded
        - Add DBIC_MULTICREATE_DEBUG env var (undocumented, quasi-internal)
        - Fix up multi-create to:
          - correctly propagate columns loaded during multi-insert of rels
          - not try and insert things tagged on via new_related unless required
        - Possible to set locale in IC::DateTime extra => {} config
        - Calling the accessor of a belongs_to when the foreign_key
          was NULL and the row was not stored would unexpectedly fail 
        - Split sql statements for deploy only if SQLT::Producer returned a scalar
          containing all statements to be executed
        - Add as_query() for ResultSet and ResultSetColumn. This makes subqueries
          possible. See the Cookbook for details.
        - Massive rewrite of Ordered to properly handle position constraints and
          to make it more matpath-friendly
        - deploy_statements called ddl_filename with the $version and $dir arguments
          in the wrong order.
        - columns/+columns attributes now support { as => select } hahsrefs
        - support for views both in DBIC and via deploy() in SQLT

0.08099_06 2009-01-23 07:30:00 (UTC)